# compose-multiplatform

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG1_TYPES_CATEGORIES.md  CHANGELOG2_CATEGORIES_TYPES.md  CHANGELOG3_CATEGORIES_TYPES_AS_ICONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  OWNERS  README.md  SECURITY.md  SampleLibraryMetadata.json  VERSIONING.md  apiModule.gradle  build.gradle  build_dependencies.gradle  dependencies.gradle  diff_and_docs.gradle  gradle.properties  init.gradle  jetify.gradle  kotlin-dsl-dependency.gradle  kotlin-dsl-dependency.gradle.kts  lint.xml  lint_samples.xml  local_dokka.gradle  modifications_reporter.gradle  out.gradle  release.gradle  remoteBuildCache.gradle  repos.gradle  settings.gradle  settings.gradle.kts  shared.gradle  studioCompat.gradle  studio_versions.properties  unbundled_check.gradle  versions.gradle
.github/: PULL_REQUEST_TEMPLATE.md
apply/: applyAndroidXComposeImplPlugin.gradle  applyAndroidXDocsImplPlugin.gradle  applyAndroidXImplPlugin.gradle  applyAndroidXLayoutlibImplPlugin.gradle  applyAndroidXPaparazziImplPlugin.gradle  applyAndroidXPlaygroundRootImplPlugin.gradle  applyAndroidXRootImplPlugin.gradle
artwork/: compose-logo.xml
benchmark-utils/: OWNERS  build.gradle  lint-baseline.xml
benchmarks/: build.gradle.kts  settings.gradle.kts
benchmarks-intellij/: README.md  settings.gradle.kts
bom/: build.gradle.kts  settings.gradle.kts
build-helpers/: build.gradle.kts  gradle.properties  settings.gradle.kts
cef/: README.md  build.gradle.kts  (+1 more)
ci/: release.md
compose/compose/ui/ui-inspection/src/main/cpp/: CMakeLists.txt
(+15717 files in other folders)
